Updating the rest of our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a self-taught game developer who is learning web development to be more versatile in the field</p>
+      <p>I am a self-taught game developer who is learning web development to be more versatile in the field.</p>
       <h1>Where I'm From</h1>
       <p>Millbrae, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love playing video games, watching sports, and playing music on different instruments.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Game developer/programmer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Millbrae, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Web development could be seen as a sought after skill within the gaming industry due to having a programmer who not only knows gaming scripts, but also a different type of programming which could be seen as a valuable asset.</p>
     </section>
 
     <footer id="footer">
